# flash-cards

./: .gitignore  LICENSE  README.md  pyproject.toml
src/flash_cards/: database.py  quiz.py
