[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-cards"
version = "0.1.0"
description = "Flash Card Tool"
authors = [{ name = "Kate Novak" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "SQLAlchemy>=2.0.46",
]

[tool.setuptools.packages.find]
where = ["src"]
